--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DottPizza</title>
+    <!-- fav-icon -->
+     <link rel="icon" href="/src/assets/pizza1.png">
     <!-- Tailwind Link -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Css Link -->
     <link rel="stylesheet" href="../src/style/style.css">
 </head>
-
 <body>
     <!-- nav -->
     <nav>
