--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../src/style/style.css">
 </head>
 <body>
+    <a href=""></a>
     <!-- nav -->
     <nav>
         <div id="app"></div>
