--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -16,8 +16,11 @@
 <nav>
     <div id="app"></div>
 </nav>
-    <!-- Flip-Card -->
-    <div id="cardContainer"></div>
+<!-- hero -->
+ <div class="hero">
+     <!-- Flip-Card -->
+     <div id="cardContainer"></div>
+ </div>
     <!-- main Js -->
      <script src="/App.js"></script>
     <!-- menu Js -->
