--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DottPizza</title>
+    <!-- fav-icon -->
+    <link rel="icon" href="/src/assets/pizza1.png">
     <!-- Tailwind Link -->
-     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Css Link -->
     <link rel="stylesheet" href="../style/style.css">
+        <!-- Font Awesome -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+
 </head>
 
 <body>
@@ -21,6 +26,7 @@
      <!-- Flip-Card -->
      <div id="cardContainer"></div>
  </div>
+
     <!-- main Js -->
      <script src="/App.js"></script>
     <!-- menu Js -->
