--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -17,6 +17,26 @@
 </head>
 
 <body>
+    <!-- MobileNav -->
+    <nav>
+        <ul id="Mobilenav" class="bg-red-500 w-fit absolute -top-80 left-0 md:hidden w-full h-44 px-8 py-4 text-xl">
+            <a href="/index.html">
+                <li class="pb-2">Home</li>
+            </a>
+            <a href="./src/pages/menu.html">
+                <li class="pb-2">View Menu</li>
+            </a>
+            <a href="https://api.whatsapp.com/send/?phone=201148819479&text&type=phone_number&app_absent=0"
+                target="_blank">
+                <li class="pb-2">Order Now</li>
+            </a>
+            <i class="fa-brands fa-whatsapp pr-8"></i>
+            <i class="fa-brands fa-instagram pr-8"></i>
+            <i class="fa-brands fa-facebook pr-8"></i>
+        </ul>
+        <i id="menu"
+            class="fa-solid fa-bars-staggered block md:hidden cursor-pointer pt-5 text-2xl text-white top-4 absolute right-4 z-50"></i>
+    </nav>
     <!-- nav -->
 <nav>
     <div id="app"></div>
