--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-<!-- MobileNav -->
-    <nav>
+    <!-- MobileNav -->
+     <nav>
         <ul id="Mobilenav" class="bg-white absolute -top-80 left-0 md:hidden w-full h-56 px-8 py-8 text-xl">
             <li class="pb-2">
                 <a href="/index.html"><i class="fa-solid fa-house-chimney pr-2"></i>Home</a>
@@ -58,6 +58,21 @@
         <i id="menu"
             class="fa-solid fa-bars-staggered block md:hidden cursor-pointer pt-5 text-2xl text-white top-4 absolute right-4 z-50"></i>
     </nav>
+    <!-- nav -->
+      <!-- Navbar -->
+      <nav id="nav" class="flex justify-between items-center  px-4 py-4  md:px-8 fixed top-0 left-0 w-full  text-white">
+      <div></div>
+      <img src="../assets/logo.webp" alt="logo" class="w-28 h-24  absolute md:-top-4 top-1 left-0 ">
+      <ul class="hidden md:flex gap-8  font-medium">
+        <li><a href="/index.html" class="hover:text-red-600">Home</a></li>
+          <li><a href="./src/pages/menu.html" class="hover:text-red-600">Menu</a></li>
+          <li><a href="#about" class="hover:text-red-600">About</a></li>
+          <li><a href="#contact" class="hover:text-red-600">Contact</a></li>
+        </ul>
+        <div>
+        <i class="fa-solid fa-pizza-slice hidden md:block text-2xl text-white cursor-pointer"></i>
+        </div>
+      </nav>
 <!-- hero -->
  <div class="hero">
      <!-- Flip-Card -->
