--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -23,7 +23,7 @@
             <li class="pb-2">
                 <a href="/index.html"><i class="fa-solid fa-house-chimney pr-2"></i>Home</a>
             </li>
-            <li class="pb-2">
+            <li class="pb-2" id="Menubtn">
                 <a href="./src/pages/menu.html"><i class="fa-solid fa-utensils pr-2"></i>View Menu</a>
             </li>
             <li class="pb-2">
@@ -65,7 +65,7 @@
       <img src="../assets/logo.webp" alt="logo" class="w-28 h-24  absolute md:-top-4 top-1 left-0 ">
       <ul class="hidden md:flex gap-8  font-medium">
         <li><a href="/index.html" class="hover:text-red-600">Home</a></li>
-          <li><a href="./src/pages/menu.html" class="hover:text-red-600">Menu</a></li>
+          <li ><a href="#" class="hover:text-red-600" id="Menubtn">Menu</a></li>
           <li><a href="#about" class="hover:text-red-600">About</a></li>
           <li><a href="#contact" class="hover:text-red-600">Contact</a></li>
         </ul>
@@ -73,14 +73,13 @@
         <i class="fa-solid fa-pizza-slice hidden md:block text-2xl text-white cursor-pointer"></i>
         </div>
       </nav>
-<!-- hero -->
- <div class="hero">
-     <!-- Flip-Card -->
-     <div id="cardContainer">
-
+      <!-- Flip-Card -->
+      <div class="hero" id="cardContainer">
+    </div>
+    <!-- hero -->
+    <div id="hero">
+        
      </div>
-     
- </div>
     <!-- main Js -->
      <script src="/App.js"></script>
     <!-- menu Js -->
