--- a/index.html
+++ b/index.html
@@ -1,124 +1,105 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!doctype html>
+<html lang=en>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Authentic Italian Pizza - Fresh, handcrafted pizzas baked to perfection. Order online or view our menu.">
-    <title>DottPizza</title>
-    <link rel="preload" as="image" href="./src/assets/pizza1.webp">
-    <!-- fav-icon -->
-    <link rel="icon" href="/src/assets/pizza1.png">
-    <!-- Tailwind Link -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Css Link -->
-    <link rel="stylesheet" href="../src/style/style.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+<meta charset=UTF-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta name=description content="Authentic Italian Pizza - Fresh, handcrafted pizzas baked to perfection. Order online or view our menu.">
+<title>DottPizza</title>
+<link rel=preload as=image href=./src/assets/pizza1.webp>
+<link rel=icon href=/src/assets/pizza1.png>
+<script src=https://cdn.tailwindcss.com></script>
+<link rel=stylesheet href=../src/style/style.css>
+<link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css>
 </head>
-
 <body>
-    <!-- nav -->
-    <!-- Navbar -->
-      <nav id="nav" class="flex justify-between items-center  px-4 py-4  md:px-8 fixed top-0 left-0 w-full  text-white z-40">
-      <div></div>
-      <img src="./src/assets/logo.webp" alt="logo" class="w-28 h-24  absolute md:-top-4 top-1 left-0">
-      <ul class="hidden md:flex gap-8  font-medium">
-        <li><a href="/index.html" class="hover:text-red-600">Home</a></li>
-          <li><a href="./src/pages/menu.html" class="hover:text-red-600">Menu</a></li>
-          <li><a href="#about" class="hover:text-red-600">About</a></li>
-          <li><a href="#contact" class="hover:text-red-600">Contact</a></li>
-        </ul>
-        <div>
-        <i class="fa-solid fa-pizza-slice hidden md:block text-2xl text-white cursor-pointer"></i>
-        </div>
-      </nav>
-
-      <!-- Hero Section -->
-      <section class="relative hero w-full h-screen flex items-center justify-center">
-  <!-- Background img -->
-  <picture class="absolute inset-0 w-full h-full">
-    <source srcset="/src/assets/Pizza2.webp" type="image/avif" media="(max-width: 768px)">
-    <source srcset="/src/assets/Pizza2.webp" type="image/avif">
-    <source srcset="/src/assets/Pizza2.webp" type="image/webp" media="(max-width: 768px)">
-    <source srcset="/src/assets/Pizza2.webp" type="image/webp">
-    <img src="/src/assets/Pizza2.webp"
-         alt="Authentic Italian Pizza"
-         width="1280" height="720"
-         class="w-full h-full object-cover"
-         fetchpriority="high"
-         decoding="async">
-  </picture>
-
-  <!--Gradiant Layer-->
-  <div class="absolute inset-0 bg-gradient-to-r from-green-700/60 via-white/40 to-red-600/60"></div>
-
-  <!-- Content -->
-  <div class="relative  text-center   text-white max-w-xl px-4" style="text-shadow: 5px 4px 6px rgba(0,0,0,0.8)">
-    <h1 class="text-5xl md:text-6xl font-bold leading-tight">
-      Authentic <span class="text-red-500">Italian Pizza</span>
-    </h1>
-    <p class="mt-4 text-lg">
-      Taste the tradition of Italy with our handcrafted pizzas.
-    </p>
-    <div class="mt-6 flex justify-center gap-4">
-      <button id="menuBtn" class="bg-red-600 px-6 py-3 rounded-lg hover:bg-red-700 transition">
-        View Menu
-      </button>
-      <a href="https://api.whatsapp.com/send/?phone=201148819479"
-         target="_blank"
-         class="border border-red-600 px-6 py-3 rounded-lg hover:bg-red-600 transition">
-         Order Now
-      </a>
-    </div>
-  </div>
+<nav id=nav class="flex justify-between items-center px-4 py-4 md:px-8 fixed top-0 left-0 w-full text-white z-40">
+<div></div>
+<img src=./src/assets/logo.webp alt=logo class="w-28 h-24 absolute md:-top-4 top-1 left-0">
+<ul class="hidden md:flex gap-8 font-medium">
+  <li class=pb-2>
+<a href=/index.html>Home</a>
+</li>
+<li class=pb-2 id=Menubtn>
+<a href=./src/pages/menu.html>View Menu</a>
+</li>
+<li class=pb-2>
+<a href="https://api.whatsapp.com/send/?phone=201148819479&text&type=phone_number&app_absent=0" target=_blank>
+Order Now
+</a>
+</li>
+<li class=pb-2>
+<a href="https://maps.app.goo.gl/2B2T9j11u212DBP89?g_st=ic" target=_blank>
+Visit Branch
+</a>
+</li>
+</ul>
+<div>
+<i class="fa-solid fa-pizza-slice hidden md:block text-2xl text-white cursor-pointer"></i>
+</div>
+</nav>
+<section class="relative hero w-full h-screen flex items-center justify-center">
+<picture class="absolute inset-0 w-full h-full">
+<source srcset=/src/assets/pizza2.webp type=image/avif media="(max-width: 768px)">
+<source srcset=/src/assets/pizza2.webp type=image/avif>
+<source srcset=/src/assets/pizza2.webp type=image/webp media="(max-width: 768px)">
+<source srcset=/src/assets/pizza2.webp type=image/webp>
+<img src=/src/assets/pizza2.webp alt="Authentic Italian Pizza" width=1280 height=720 class="w-full h-full object-cover" fetchpriority=high decoding=async>
+</picture>
+<div class="absolute inset-0 bg-gradient-to-r from-green-700/60 via-white/40 to-red-600/60"></div>
+<div class="relative text-center text-white max-w-xl px-4" style="text-shadow:5px 4px 6px rgba(0,0,0,.8)">
+<h1 class="text-5xl md:text-6xl font-bold leading-tight">
+Authentic <span class=text-red-500>Italian Pizza</span>
+</h1>
+<p class="mt-4 text-lg">
+Taste the tradition of Italy with our handcrafted pizzas.
+</p>
+<div class="mt-6 flex justify-center gap-4">
+<button id=menuBtn class="bg-red-600 px-6 py-3 rounded-lg hover:bg-red-700 transition">
+View Menu
+</button>
+<a href="https://api.whatsapp.com/send/?phone=201148819479" target=_blank class="border border-red-600 px-6 py-3 rounded-lg hover:bg-red-600 transition">
+Order Now
+</a>
+</div>
+</div>
 </section>
-
-    <!-- MobileNav -->
-    <nav>
-        <ul id="Mobilenav" class="bg-white absolute -top-80 left-0 md:hidden w-full h-56 px-8 py-8 text-xl z-20">
-            <li class="pb-2">
-                <a href="/index.html"><i class="fa-solid fa-house-chimney pr-2"></i>Home</a>
-            </li>
-            <li class="pb-2" id="Menubtn">
-                <a href="./src/pages/menu.html"><i class="fa-solid fa-utensils pr-2"></i>View Menu</a>
-            </li>
-            <li class="pb-2">
-                <a href="https://api.whatsapp.com/send/?phone=201148819479&text&type=phone_number&app_absent=0"
-                    target="_blank">
-                    <i class="fa-solid fa-pizza-slice pr-2"></i>Order Now
-                </a>
-            </li>
-            <li class="pb-2">
-                <a href="https://maps.app.goo.gl/2B2T9j11u212DBP89?g_st=ic"
-                    target="_blank">
-                    <i class="fa-solid fa-location-dot pr-2"></i>Visit Branch
-                </a>
-            </li>
-            <!-- icons -->
-             <div class="icons text-white gap-2 flex">
-                 <a href="https://api.whatsapp.com/send/?phone=201148819479&text&type=phone_number&app_absent=0"
-                     target="_blank"></href=>
-                     <i class="fa-brands fa-whatsapp bg-green-500">
-                     </i>
-                 </a>
-                 <a href="https://www.instagram.com/dott.pizza.eg?igsh=YXVyZ3Q1aDI0bjlp&utm_source=qr" target="_blank">
-                     <i class="fa-brands fa-instagram bg-red-500">
-                     </i>
-                 </a>
-                 <a href="https://www.facebook.com/share/19XHqaGEHr/?mibextid=wwXIfr" target="_blank">
-                     <i class="fa-brands fa-facebook bg-blue-500">
-                     </i>
-                 </a>
-             </div>
-        </ul>
-        <i id="menu"
-            class="fa-solid fa-bars-staggered block md:hidden cursor-pointer pt-5 text-2xl text-white top-4 absolute right-4 z-50"></i>
-    </nav>
-    <!-- menu JS -->
-    <script src="./src/pages/menu.js" defer></script>
-    <!-- Main Js -->
-    <script src="./App.js"></script>
+<nav>
+<ul id=Mobilenav class="bg-white absolute -top-80 left-0 md:hidden w-full h-56 px-8 py-8 text-xl z-20">
+<li class=pb-2>
+<a href=/index.html><i class="fa-solid fa-house-chimney pr-2"></i>Home</a>
+</li>
+<li class=pb-2 id=Menubtn>
+<a href=./src/pages/menu.html><i class="fa-solid fa-utensils pr-2"></i>View Menu</a>
+</li>
+<li class=pb-2>
+<a href="https://api.whatsapp.com/send/?phone=201148819479&text&type=phone_number&app_absent=0" target=_blank>
+<i class="fa-solid fa-pizza-slice pr-2"></i>Order Now
+</a>
+</li>
+<li class=pb-2>
+<a href="https://maps.app.goo.gl/2B2T9j11u212DBP89?g_st=ic" target=_blank>
+<i class="fa-solid fa-location-dot pr-2"></i>Visit Branch
+</a>
+</li>
+<div class="icons text-white gap-2 flex">
+<a href="https://api.whatsapp.com/send/?phone=201148819479&text&type=phone_number&app_absent=0" target=_blank>
+<i class="fa-brands fa-whatsapp bg-green-500">
+</i>
+</a>
+<a href="https://www.instagram.com/dott.pizza.eg?igsh=YXVyZ3Q1aDI0bjlp&utm_source=qr" target=_blank>
+<i class="fa-brands fa-instagram bg-red-500">
+</i>
+</a>
+<a href="https://www.facebook.com/share/19XHqaGEHr/?mibextid=wwXIfr" target=_blank>
+<i class="fa-brands fa-facebook bg-blue-500">
+</i>
+</a>
+</div>
+</ul>
+<i id=menu class="fa-solid fa-bars-staggered block md:hidden cursor-pointer pt-5 text-2xl text-white top-4 absolute right-4 z-50"></i>
+</nav>
+<audio id="flipSound" src="./src/audio/Flip-Sound.mp3" preload="auto"></audio>
+<script src=./src/pages/menu.js defer></script>
+<script src=./App.js></script>
 </body>
-
 </html>
