--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Order Now
 </ul>
 <i id=menu class="fa-solid fa-bars-staggered block md:hidden cursor-pointer pt-5 text-2xl text-white top-4 absolute right-4 z-50"></i>
 </nav>
-<audio id="flipSound" src="./src/audio/Flip-Sound.mp3" preload="auto"></audio>
+<audio id="flipSound" src="/src/audio/Flip-Sound.mp3" preload="auto"></audio>
 <script src=./src/pages/menu.js defer></script>
 <script src=./App.js></script>
 </body>
