--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@ Visit Branch
 </nav>
 <section class="relative hero w-full h-screen flex items-center justify-center">
 <picture class="absolute inset-0 w-full h-full">
-<source srcset=/src/assets/pizza2.webp type=image/avif media="(max-width: 768px)">
-<source srcset=/src/assets/pizza2.webp type=image/avif>
-<source srcset=/src/assets/pizza2.webp type=image/webp media="(max-width: 768px)">
-<source srcset=/src/assets/pizza2.webp type=image/webp>
-<img src=/src/assets/pizza2.webp alt="Authentic Italian Pizza" width=1280 height=720 class="w-full h-full object-cover" fetchpriority=high decoding=async>
+<source srcset=/src/assets/hero.webp type=image/avif media="(max-width: 768px)">
+<source srcset=/src/assets/hero.webp type=image/avif>
+<source srcset=/src/assets/hero.webp type=image/webp media="(max-width: 768px)">
+<source srcset=/src/assets/hero.webp type=image/webp>
+<img src=/src/assets/hero.webp alt="Authentic Italian Pizza" width=1280 height=720 class="w-full h-full object-cover" fetchpriority=high decoding=async>
 </picture>
 <div class="absolute inset-0 bg-gradient-to-r from-green-700/60 via-white/40 to-red-600/60"></div>
 <div class="relative text-center text-white max-w-xl px-4" style="text-shadow:5px 4px 6px rgba(0,0,0,.8)">
