--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=description content="Authentic Italian Pizza - Fresh, handcrafted pizzas baked to perfection. Order online or view our menu.">
 <title>DottPizza</title>
-<link rel=preload as=image href=./src/assets/pizza1.webp>
-<link rel=icon href=/src/assets/pizza1.png>
+<link rel=icon href="src/assets/Favicon.webp">
 <script src=https://cdn.tailwindcss.com></script>
 <link rel=stylesheet href=../src/style/style.css>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css>
@@ -98,7 +97,6 @@ Order Now
 </ul>
 <i id=menu class="fa-solid fa-bars-staggered block md:hidden cursor-pointer pt-5 text-2xl text-white top-4 absolute right-4 z-50"></i>
 </nav>
-<audio id="flipSound" src="/src/audio/Flip-Sound.mp3" preload="auto"></audio>
 <script src=./src/pages/menu.js defer></script>
 <script src=./App.js></script>
 </body>
