--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -64,7 +64,7 @@
 </div>
 <script src=/App.js></script>
 <script src=../pages/menu.js></script>
-<audio id="flipSound" src="/public/audio/Flip-Sound.mp3" preload="auto"></audio>
+<audio id="flipSound" src="/src/audio/Flip-Sound.mp3" preload="auto"></audio>
 <img src="/src/assets/menu.webp" alt="">
 </body>
 </html>
