--- a/index.html
+++ b/index.html
@@ -17,28 +17,27 @@
 
 <body>
   <!-- Intro Screen -->
-   
-  <div id="intro" class="md:flex md:justify-center md:items-center absolute w-screen h-screen bg-black z-50 overflow-hidden">
+  <!-- <div id="intro" class="md:flex md:justify-center md:items-center absolute w-screen h-screen bg-black z-50 overflow-hidden"> -->
    <!-- Welcome-Text -->
-      <div id="Welcome-to-dozzpizza" class="absolute inset-0 flex items-center justify-center text-white text-3xl md:text-5xl font-bold opacity-0">
-        <h1>Welcome To Dott Pizaa</h1>
-      </div>
+      <!-- <div id="Welcome-to-dozzpizza" class="absolute inset-0 flex items-center justify-center text-white text-3xl md:text-5xl font-bold opacity-0"> -->
+        <!-- <h1>Welcome To Dott Pizaa</h1> -->
+      <!-- </div> -->
     <!-- Person -->
-     <div id="person" class="opacity-0" >
-       <lottie-player src="/src/Json/Online food order.json" background="transparent" speed="1"
-           autoplay></lottie-player>
-     </div>
+     <!-- <div id="person" class="opacity-0" > -->
+       <!-- <lottie-player src="/src/Json/Online food order.json" background="transparent" speed="1" -->
+           <!-- autoplay></lottie-player> -->
+     <!-- </div> -->
       <!-- Pizza -->
-       <div id="pizza-slice" class="opacity-0" >
-         <lottie-player     src="/src/Json/Pizza Slices.json" background="transparent" speed="1"
-          autoplay></lottie-player>
-       </div>
+       <!-- <div id="pizza-slice" class="opacity-0" > -->
+         <!-- <lottie-player     src="/src/Json/Pizza Slices.json" background="transparent" speed="1" -->
+          <!-- autoplay></lottie-player> -->
+       <!-- </div> -->
        <!-- Motorcycle -->
-       <div id="Motorcycle" class="opacity-0 absolute w-screen ">
-         <lottie-player  src="./src/Json/Motorcycle.json" background="transparent" speed="2" autoplay loop></lottie-player>
-       </div>
+       <!-- <div id="Motorcycle" class="opacity-0 absolute w-screen "> -->
+         <!-- <lottie-player  src="./src/Json/Motorcycle.json" background="transparent" speed="2" autoplay loop></lottie-player> -->
+       <!-- </div> -->
       <!-- Pizza Process -->
-  </div>
+  <!-- </div> -->
   <!-- Desktop Nav -->
   <nav id=nav class="flex justify-between items-center px-4 py-4 md:px-8 fixed top-0 left-0 w-full text-white z-40">
     <div></div>
